// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Body renders with base props 1`] = `
<nav
  className="lab-narrow-sidebar__body """
>
  Test content
</nav>
`;

exports[`Body renders with dividers 1`] = `
<nav
  className="lab-narrow-sidebar__body lab-narrow-sidebar__body--with-scroll"
>
  Test content
</nav>
`;
